test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: test
  labels:
    security-level: low
spec: {}
status: {}
