immumatable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"immutable-deployment"},"name":"immutable-deployment","namespace":"team-purple"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"immutable-deployment"}},"template":{"metadata":{"labels":{"app":"immutable-deployment"}},"spec":{"containers":[{"command":["sh","-c","tail -f /dev/null"],"image":"busybox:1.32.0","imagePullPolicy":"IfNotPresent","name":"busybox","resources":{"requests":{"cpu":"20m","me [...]
  creationTimestamp: "2023-09-27T07:50:07Z"
  generation: 1
  labels:
    app: immutable-deployment
  name: immutable-deployment
  namespace: team-purple
  resourceVersion: "65592"
  uid: 585b48df-b52e-4596-b28f-9ee51bcb4167
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: immutable-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: immutable-deployment
    spec:
      containers:
      - command:
        - sh
        - -c
        - tail -f /dev/null
        image: busybox:1.32.0
        imagePullPolicy: IfNotPresent
        name: busybox
        resources:
          requests:
            cpu: 20m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: temp-vol
          mountPath: /tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: temp-vol
        emptyDir: {}
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-09-27T07:50:07Z"
    lastUpdateTime: "2023-09-27T07:50:27Z"
    message: ReplicaSet "immutable-deployment-7765fdcbbc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-02-05T14:02:13Z"
    lastUpdateTime: "2024-02-05T14:02:13Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
